src/test/deca/context/valid/created/une-classe.deca
//Description :
// Test de déclaration d'une unique classe
//
// Resultats :
// 


class Premiere {

}

{
    print("ok");
}
