src/test/deca/context/invalid/created/print_class.deca
//Description :
// Test de print une classe
//
// Resultats :
// Erreur


class Premiere{

}



{
Premiere a = new Premiere();
print(a);
}
